--- a/ExampleExpr/ExampleExpr.vcxproj
+++ b/ExampleExpr/ExampleExpr.vcxproj
@@ -18,126 +18,11 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="src\Action.cpp" />
-    <ClCompile Include="src\base.cpp" />
-    <ClCompile Include="src\buffer.cpp" />
-    <ClCompile Include="src\CAction.cpp" />
-    <ClCompile Include="src\code.cpp" />
-    <ClCompile Include="src\control.cpp" />
-    <ClCompile Include="src\CppAction.cpp" />
-    <ClCompile Include="src\CppAction2.cpp" />
-    <ClCompile Include="src\CppTable.cpp" />
-    <ClCompile Include="src\CppTable2.cpp" />
-    <ClCompile Include="src\CTable.cpp" />
-    <ClCompile Include="src\dfa.cpp" />
-    <ClCompile Include="src\diagnose.cpp" />
-    <ClCompile Include="src\dump.cpp" />
-    <ClCompile Include="src\generator.cpp" />
-    <ClCompile Include="src\grammar.cpp" />
-    <ClCompile Include="src\JavaAction.cpp" />
-    <ClCompile Include="src\JavaTable.cpp" />
-    <ClCompile Include="src\jikespg.cpp" />
-    <ClCompile Include="src\jikespg_act.cpp" />
-    <ClCompile Include="src\jikespg_init.cpp" />
-    <ClCompile Include="src\jikespg_prs.cpp" />
-    <ClCompile Include="src\LexStream.cpp" />
-    <ClCompile Include="src\MlAction.cpp" />
-    <ClCompile Include="src\MlTable.cpp" />
-    <ClCompile Include="src\option.cpp" />
-    <ClCompile Include="src\optionDesc.cpp" />
-    <ClCompile Include="src\optionParser.cpp" />
-    <ClCompile Include="src\options.cpp" />
-    <ClCompile Include="src\optionValues.cpp" />
-    <ClCompile Include="src\parser.cpp" />
-    <ClCompile Include="src\pda.cpp" />
-    <ClCompile Include="src\PlxAction.cpp" />
-    <ClCompile Include="src\PlxasmAction.cpp" />
-    <ClCompile Include="src\PlxasmTable.cpp" />
-    <ClCompile Include="src\PlxTable.cpp" />
-    <ClCompile Include="src\produce.cpp" />
-    <ClCompile Include="src\resolve.cpp" />
-    <ClCompile Include="src\scanner.cpp" />
-    <ClCompile Include="src\sp.cpp" />
-    <ClCompile Include="src\symbol.cpp" />
-    <ClCompile Include="src\tab.cpp" />
-    <ClCompile Include="src\table.cpp" />
-    <ClCompile Include="src\util.cpp" />
-    <ClCompile Include="src\XmlAction.cpp" />
-    <ClCompile Include="src\XmlTable.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="src\Action.h" />
-    <ClInclude Include="src\base.h" />
-    <ClInclude Include="src\blocks.h" />
-    <ClInclude Include="src\buffer.h" />
-    <ClInclude Include="src\CAction.h" />
-    <ClInclude Include="src\code.h" />
-    <ClInclude Include="src\control.h" />
-    <ClInclude Include="src\CppAction.h" />
-    <ClInclude Include="src\CppAction2.h" />
-    <ClInclude Include="src\CppTable.h" />
-    <ClInclude Include="src\CppTable2.h" />
-    <ClInclude Include="src\CTable.h" />
-    <ClInclude Include="src\CTC.h" />
-    <ClInclude Include="src\dfa.h" />
-    <ClInclude Include="src\diagnose.h" />
-    <ClInclude Include="src\frequency.h" />
-    <ClInclude Include="src\generator.h" />
-    <ClInclude Include="src\grammar.h" />
-    <ClInclude Include="src\JavaAction.h" />
-    <ClInclude Include="src\JavaTable.h" />
-    <ClInclude Include="src\jikespg_act.h" />
-    <ClInclude Include="src\jikespg_prs.h" />
-    <ClInclude Include="src\jikespg_sym.h" />
-    <ClInclude Include="src\LCA.h" />
-    <ClInclude Include="src\LexStream.h" />
-    <ClInclude Include="src\MlAction.h" />
-    <ClInclude Include="src\MlTable.h" />
-    <ClInclude Include="src\node.h" />
-    <ClInclude Include="src\NTC.h" />
-    <ClInclude Include="src\option.h" />
-    <ClInclude Include="src\options.h" />
-    <ClInclude Include="src\parser.h" />
-    <ClInclude Include="src\partition.h" />
-    <ClInclude Include="src\pda.h" />
-    <ClInclude Include="src\PlxAction.h" />
-    <ClInclude Include="src\PlxasmAction.h" />
-    <ClInclude Include="src\PlxasmTable.h" />
-    <ClInclude Include="src\PlxTable.h" />
-    <ClInclude Include="src\produce.h" />
-    <ClInclude Include="src\resolve.h" />
-    <ClInclude Include="src\scanner.h" />
-    <ClInclude Include="src\set.h" />
-    <ClInclude Include="src\sp.h" />
-    <ClInclude Include="src\spell.h" />
-    <ClInclude Include="src\Stacks.h" />
-    <ClInclude Include="src\symbol.h" />
-    <ClInclude Include="src\tab.h" />
-    <ClInclude Include="src\table.h" />
-    <ClInclude Include="src\TTC.h" />
-    <ClInclude Include="src\tuple.h" />
-    <ClInclude Include="src\util.h" />
-    <ClInclude Include="src\XmlAction.h" />
-    <ClInclude Include="src\XmlTable.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="src\jikespg.g" />
-    <None Include="src\Makefile" />
-    <None Include="src\MakeRules" />
-    <None Include="src\MakeRules.aix" />
-    <None Include="src\MakeRules.cygwin" />
-    <None Include="src\MakeRules.generic" />
-    <None Include="src\MakeRules.linux_x86" />
-    <None Include="src\MakeRules.linux_x86_64" />
-    <None Include="src\MakeRules.macosx_x86" />
-    <None Include="src\MakeRules.macosx_x86_64" />
-  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{f39b855c-1157-4eb3-aeba-33c6fe7b5bfe}</ProjectGuid>
-    <RootNamespace>lpg2</RootNamespace>
+    <ProjectGuid>{2bea18be-262b-49df-8385-13bee0f2e1a2}</ProjectGuid>
+    <RootNamespace>ExampleExpr</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -187,6 +72,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>..\lpgRuntimeCpp\src;$(IncludePath)</IncludePath>
+    <LibraryPath>..\bin;$(LibraryPath)</LibraryPath>
     <OutDir>..\bin</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -202,12 +89,14 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>lpg_MDD.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -224,6 +113,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>lpg_MD.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -254,7 +144,30 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="ExampleExpr.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ExprLexer.h" />
+    <ClInclude Include="ExprLexerprs.h" />
+    <ClInclude Include="ExprLexersym.h" />
+    <ClInclude Include="ExprParser.h" />
+    <ClInclude Include="ExprParserprs.h" />
+    <ClInclude Include="ExprParsersym.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="..\packages\icu4c.v140.redist.59.1.1\build\native\icu4c.v140.redist.targets" Condition="Exists('..\packages\icu4c.v140.redist.59.1.1\build\native\icu4c.v140.redist.targets')" />
+    <Import Project="..\packages\icu4c.v140.59.1.1\build\native\icu4c.v140.targets" Condition="Exists('..\packages\icu4c.v140.59.1.1\build\native\icu4c.v140.targets')" />
   </ImportGroup>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>这台计算机上缺少此项目引用的 NuGet 程序包。使用“NuGet 程序包还原”可下载这些程序包。有关更多信息，请参见 http://go.microsoft.com/fwlink/?LinkID=322105。缺少的文件是 {0}。</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\icu4c.v140.redist.59.1.1\build\native\icu4c.v140.redist.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\icu4c.v140.redist.59.1.1\build\native\icu4c.v140.redist.targets'))" />
+    <Error Condition="!Exists('..\packages\icu4c.v140.59.1.1\build\native\icu4c.v140.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\icu4c.v140.59.1.1\build\native\icu4c.v140.targets'))" />
+  </Target>
 </Project>
