--- a/JavaExample/JavaExample.vcxproj.filters
+++ b/JavaExample/JavaExample.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="JavaExample.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="JavaParser_Action.cpp">
+      <Filter>头文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -48,6 +51,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="JavaParsersym.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="JavaParser_top_level_ast.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
