--- a/lpgRuntimeCpp/lpgRuntimeCpp.vcxproj.filters
+++ b/lpgRuntimeCpp/lpgRuntimeCpp.vcxproj.filters
@@ -182,6 +182,9 @@
     <ClInclude Include="src\DifferTokens.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\AstPoolHolder.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
