1.add ast-block option to specific which block is the ast to generate . 2. Ast pool holder move to Action class. 3. example change.

--- a/JavaExample/JavaExample.vcxproj
+++ b/JavaExample/JavaExample.vcxproj
@@ -145,7 +145,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="JavaExample.cpp" />
-    <ClCompile Include="JavaParser_Action.cpp" />
+    <ClCompile Include="JavaParser.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
