--- a/lpgRuntimeCpp/lpgRuntimeCpp.vcxproj.filters
+++ b/lpgRuntimeCpp/lpgRuntimeCpp.vcxproj.filters
@@ -185,6 +185,9 @@
     <ClInclude Include="src\AstPoolHolder.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\ParseTableProxy.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
