1.fixed: result visitor 2.add: any type 3.try to find out the unique type for any ast.

--- a/JavaExample/JavaExample.vcxproj.filters
+++ b/JavaExample/JavaExample.vcxproj.filters
@@ -19,7 +19,7 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="JavaParser.cpp">
-      <Filter>头文件</Filter>
+      <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
